# ctci-py

./: .gitignore  LICENSE  README.md  ctci.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: lint-and-test.yml
chapter-01-arrays-and-strings/: exercise_01_is_unique.py  exercise_02_check_permutation.py  exercise_03_urlify.py  exercise_04_palindrome_permutation.py  exercise_05_one_away.py  exercise_06_string_compression.py  exercise_07_rotate_matrix.py  exercise_08_zero_matrix.py  exercise_09_string_rotation.py
chapter-02-linked-lists/: exercise_01_remove_dups.py  exercise_02_return_kth_to_last.py  exercise_03_delete_middle_node.py  exercise_04_partition.py  exercise_05_sum_lists.py  exercise_06_palindrome.py  exercise_07_intersection.py  exercise_08_loop_detection.py  linked_list.py
chapter-03-stacks-and-queues/: exercise_02_stack_min.py
