[tool.poetry]
name = "ctci"
version = "0.1.0"
description = "cracking code interview exercises in python"
authors = ["Damian Świstowski <damian@swistowski.org>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^5.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

